--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <meta name="viewport" content="width=device-width,initial-scale=1">
 <meta name="theme-color" content>
 <meta name="google-site-verification" content="WB75wDLxEG0QzzFWhnq8LUD2MdqrTxWWOcMlt4KXOqk" />
-<link rel="canonical" href="http://r3dm.com/">
+<link rel="canonical" href="https://r3dm.com/">
 <link rel="amphtml" href="https://xn--n8jvaay8cqv1996gz3f.com/liga5000/r3dm/">
 <link rel="icon" href="https://s12.gifyu.com/images/Srsmm.png" />
 <link rel="preconnect" href="https://fonts.shopifycdn.com" crossorigin>
@@ -14,7 +14,7 @@
 <meta name="description" content="LIGA5000 situs remi yang menyediakan link alternatif login slot gampang menang jp saat ini di Indonesia. LIGA5000 juga memberikan bonus menarik bagi pendatang baru serta ada juga bonus cashback setiap minggunya.">
 <meta name="keywords" content="liga5000" />
 <meta property="og:site_name" content="LIGA5000">
-<meta property="og:url" content="http://r3dm.com/">
+<meta property="og:url" content="https://r3dm.com/">
 <meta property="og:title" content="LIGA5000: LINK ALTERNATIF LOGIN SLOT GAMPANG MENANG JP DI INDONESIA">
 <meta property="og:type" content="product">
 <meta property="og:description" content="LIGA5000 situs remi yang menyediakan link alternatif login slot gampang menang jp saat ini di Indonesia. LIGA5000 juga memberikan bonus menarik bagi pendatang baru serta ada juga bonus cashback setiap minggunya.">
@@ -29,17 +29,17 @@
 <script src="//trisula88.info/cdn/shop/t/1/assets/constants.js?v=58251544750838685771702987225" defer="defer"></script>
 <script src="//trisula88.info/cdn/shop/t/1/assets/pubsub.js?v=158357773527763999511702987225" defer="defer"></script>
 <script src="//trisula88.info/cdn/shop/t/1/assets/global.js?v=113367515774722599301702987225" defer="defer"></script><script src="//trisula88.info/cdn/shop/t/1/assets/animations.js?v=88693664871331136111702987223" defer="defer"></script><script>window.performance && window.performance.mark && window.performance.mark('shopify.content_for_header.start');</script><meta id="shopify-digital-wallet" name="shopify-digital-wallet" content="/57966493774/digital_wallets/dialog">
-<link rel="alternate" type="application/json+oembed" href="http://r3dm.com/">
+<link rel="alternate" type="application/json+oembed" href="https://r3dm.com/">
 <script async="async" src="/checkouts/internal/preloads.js?permanent-domain=trisula88.info&locale=en-ID"></script><script id="shopify-features" type="application/json">{"accessToken":"9c33c74c8729466edb2d6e9f48274ec6","betas":["rich-media-storefront-analytics"],"domain":"trisula88.info","predictiveSearch":true,"shopId":57966493774,"smart_payment_buttons_url":"https:\/\/trisula88.info\/cdn\/shopifycloud\/payment-sheet\/assets\/latest\/spb.en.js","dynamic_checkout_cart_url":"https:\/\/trisula88.info\/cdn\/shopifycloud\/payment-sheet\/assets\/latest\/dynamic-checkout-cart.en.js","locale":"en","optimusEnabled":true,"optimusHidden":false,"betterDynamicCheckoutRecommendationVariant":"control","shopPromisePDPV3Enabled":true}</script>
 <script>var Shopify = Shopify || {};
-Shopify.shop = "http://r3dm.com/";
+Shopify.shop = "https://r3dm.com/";
 Shopify.locale = "en";
 Shopify.currency = {"active":"IDR","rate":"1.0"};
 Shopify.country = "ID";
 Shopify.theme = {"name":"Refresh","id":125872013390,"theme_store_id":1567,"role":"main"};
 Shopify.theme.handle = "null";
 Shopify.theme.style = {"id":null,"handle":null};
-Shopify.cdnHost = "http://r3dm.com/";
+Shopify.cdnHost = "https://r3dm.com/";
 Shopify.routes = Shopify.routes || {};
 Shopify.routes.root = "/";</script>
 <script type="module">!function(o){(o.Shopify=o.Shopify||{}).modules=!0}(window);</script>
@@ -1044,7 +1044,7 @@ Skip to content
 <input type="hidden" name="options[prefix]" value="last">
 <button type="reset" class="reset__button field__button hidden" aria-label="Clear search term">
 <svg class="icon icon-close" aria-hidden="true" focusable="false">
-<use xlink:href="http://r3dm.com/">
+<use xlink:href="https://r3dm.com/">
 </svg>
 </button>
 <button class="search__button field__button" aria-label="Search">
@@ -1093,7 +1093,7 @@ Skip to content
       "",
       ""
     ],
-    "url": "http://r3dm.com/"
+    "url": "https://r3dm.com/"
   }
 </script>
 </div>
@@ -1174,7 +1174,7 @@ Open media 1 in modal
 <ul>
    <li style="list-style-type: none;">
 <ul>
-  <li><a href="http://r3dm.com/" rel="dofollow">LIGA5000</a></li>
+  <li><a href="https://r3dm.com/" rel="dofollow">LIGA5000</a></li>
   <li><a href="https://condense9.com/" rel="dofollow">LIGA5000</a></li>
   <li><a href="https://juanmatias.com/" rel="dofollow">LIGA5000</a></li>
   <li><a href="https://littlegreensoftware.com/" rel="dofollow">7upbet</a></li>
@@ -1344,7 +1344,7 @@ Share
 <div class="share-button__fallback motion-reduce">
 <div class="field">
 <span id="ShareMessage-template--15207369113678__main" class="share-button__message hidden" role="status"> </span>
-<input type="text" class="field__input" id="ShareUrl-template--15207369113678__main" value="http://r3dm.com/" placeholder="Link" onclick="this.select();" readonly>
+<input type="text" class="field__input" id="ShareUrl-template--15207369113678__main" value="https://r3dm.com/" placeholder="Link" onclick="this.select();" readonly>
 <label class="field__label" for="ShareUrl-template--15207369113678__main">Link</label>
 </div>
 <button class="share-button__close hidden no-js-hidden">
@@ -1412,7 +1412,7 @@ View full details
       "@context": "http://schema.org/",
       "@type": "Product",
       "name": "slot",
-      "url": "http://r3dm.com/",
+      "url": "https://r3dm.com/",
       "image": [
           "https:https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEjK5r4HNFPK9ckNPHDl76VWvrTk9ID0smCinwnL0ZbkvNP4hPm4F_NEc3xNh3A6ytHvpB1_XJnxdo8I_0Edj6ZSe_UqX_7cCi3MGK4Q4qx8hyphenhyphenDIwbjT9YnEqKGYJuHmE5xHYzf8GydN9z_C9_F9UzE9MfplbePPFVTYsYV8Fec3T7zhi9_1Zd4vfshftmkj/s1000/1-liga5000.jpg&width=600"
         ],
@@ -1426,7 +1426,7 @@ View full details
             "@type" : "Offer","availability" : "http://schema.org/OutOfStock",
             "price" : 0.0,
             "priceCurrency" : "IDR",
-            "url" : "http://r3dm.com/"
+            "url" : "https://r3dm.com/"
           }
 ]
     }
@@ -1604,7 +1604,7 @@ MASUK
 <li id="a11y-new-window-message">Opens in a new window.</li>
 </ul>
 <script>
-      window.shopUrl = 'http://r3dm.com/';
+      window.shopUrl = 'https://r3dm.com/';
       window.routes = {
         cart_add_url: '/cart/add',
         cart_change_url: '/cart/change',
